Fixed position mode (works around overflow constraints with scrollable containers)

--- a/src/registrar/assets/sass/_theme/_tooltips.scss
+++ b/src/registrar/assets/sass/_theme/_tooltips.scss
@@ -46,7 +46,7 @@
 .usa-tooltip__body {
   white-space: inherit;
   max-width: fit-content;
-  // position: fixed;
+  position: fixed;
 }
 
 .usa-tooltip__body--wrap {
